fixed screen collapse problem

--- a/css-aa-website-project/stylesheets/components/main-content.css
+++ b/css-aa-website-project/stylesheets/components/main-content.css
@@ -1,9 +1,13 @@
+body {
+    min-width: 740px;
+}
+
 main {
     display: grid;
     font-size:12px;
     grid-template-columns: 30% 40% 30%;
     grid-template-rows: 1fr 10fr 6fr;
-    min-width: 640px;
+    min-width: 680px;
 }
 
 a:hover {
